Implementing the widget view

--- a/DoradSmartphone/DoradSmartphone.csproj
+++ b/DoradSmartphone/DoradSmartphone.csproj
@@ -104,6 +104,9 @@
 	  <MauiXaml Update="Views\UserPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\WidgetPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
