Retrieving the actual database information about exercises and routes to the Route display, finish the Automatic flow, create a static class to grab logged user information and now getting the Address of our starting point in the routes

--- a/DoradSmartphone/DoradSmartphone.csproj
+++ b/DoradSmartphone/DoradSmartphone.csproj
@@ -144,6 +144,9 @@
 	  <MauiXaml Update="Views\ExercisePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\GeneralPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\GlassPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
