Page done, now we need to beautify the ui

--- a/DoradSmartphone/DoradSmartphone.csproj
+++ b/DoradSmartphone/DoradSmartphone.csproj
@@ -129,6 +129,9 @@
 	  <MauiXaml Update="Views\AvatarPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\CalibrationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ChoicePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
