--- a/DoradSmartphone/Platforms/Android/AndroidManifest.xml
+++ b/DoradSmartphone/Platforms/Android/AndroidManifest.xml
@@ -24,4 +24,6 @@
 
 	<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
+	<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 </manifest>
