Creation of the listener for bluetooth and the ControlDevicePage to start/stop the run

--- a/DoradSmartphone/DoradSmartphone.csproj
+++ b/DoradSmartphone/DoradSmartphone.csproj
@@ -138,6 +138,9 @@
 	  <MauiXaml Update="Views\ChoicePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ControlDevicePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DashboardPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
